--- a/languages/a-ripple-song-podcast-bn_BD.po
+++ b/languages/a-ripple-song-podcast-bn_BD.po
@@ -613,13 +613,15 @@ msgid ""
 msgstr ""
 
 #: includes/class-a-ripple-song-podcast-episodes.php:29
-#: includes/class-a-ripple-song-podcast-episodes.php:41
-msgid "ARS Episodes"
-msgstr ""
+msgid "Episodes"
+msgstr "এপিসোডসমূহ"
 
 #: includes/class-a-ripple-song-podcast-episodes.php:30
-#: includes/class-a-ripple-song-podcast-episodes.php:42
-msgid "ARS Episode"
+msgid "Episode"
+msgstr "এপিসোড"
+
+#: includes/class-a-ripple-song-podcast-episodes.php:41
+msgid "ARS Episodes"
 msgstr ""
 
 #: includes/class-a-ripple-song-podcast-episodes.php:31
