--- a/languages/a-ripple-song-podcast-ru_RU.po
+++ b/languages/a-ripple-song-podcast-ru_RU.po
@@ -615,13 +615,15 @@ msgid ""
 msgstr ""
 
 #: includes/class-a-ripple-song-podcast-episodes.php:29
-#: includes/class-a-ripple-song-podcast-episodes.php:41
-msgid "ARS Episodes"
-msgstr ""
+msgid "Episodes"
+msgstr "Эпизоды"
 
 #: includes/class-a-ripple-song-podcast-episodes.php:30
-#: includes/class-a-ripple-song-podcast-episodes.php:42
-msgid "ARS Episode"
+msgid "Episode"
+msgstr "Эпизод"
+
+#: includes/class-a-ripple-song-podcast-episodes.php:41
+msgid "ARS Episodes"
 msgstr ""
 
 #: includes/class-a-ripple-song-podcast-episodes.php:31
