--- a/languages/a-ripple-song-podcast-zh_CN.po
+++ b/languages/a-ripple-song-podcast-zh_CN.po
@@ -614,13 +614,15 @@ msgid ""
 msgstr "播客封面分辨率过大。最大：%1$d × %1$d px。当前：%2$d × %2$d px。"
 
 #: includes/class-a-ripple-song-podcast-episodes.php:29
-#: includes/class-a-ripple-song-podcast-episodes.php:41
-msgid "ARS Episodes"
-msgstr "ARS 剧集"
+msgid "Episodes"
+msgstr "剧集"
 
 #: includes/class-a-ripple-song-podcast-episodes.php:30
-#: includes/class-a-ripple-song-podcast-episodes.php:42
-msgid "ARS Episode"
+msgid "Episode"
+msgstr "剧集"
+
+#: includes/class-a-ripple-song-podcast-episodes.php:41
+msgid "ARS Episodes"
 msgstr "ARS 剧集"
 
 #: includes/class-a-ripple-song-podcast-episodes.php:31
@@ -716,3 +718,6 @@ msgstr "添加新剧集分类"
 #: includes/class-a-ripple-song-podcast-episodes.php:79
 msgid "New Episode Category Name"
 msgstr "新剧集分类名称"
+
+#~ msgid "ARS Episode"
+#~ msgstr "ARS 剧集"
