--- a/languages/a-ripple-song-podcast-bn_BD.po
+++ b/languages/a-ripple-song-podcast-bn_BD.po
@@ -2,7 +2,7 @@
 # This file is distributed under the GPL-3.0.
 msgid ""
 msgstr ""
-"Project-Id-Version: A Ripple Song Podcast 0.5.0-beta\n"
+"Project-Id-Version: A Ripple Song Podcast 0.5.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/a-ripple-song-"
 "podcast\n"
 "POT-Creation-Date: 2026-01-21T01:26:36+00:00\n"
