--- a/languages/a-ripple-song-podcast.pot
+++ b/languages/a-ripple-song-podcast.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the GPL-3.0.
 msgid ""
 msgstr ""
-"Project-Id-Version: A Ripple Song Podcast 0.5.0-beta\n"
+"Project-Id-Version: A Ripple Song Podcast 0.5.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/a-ripple-song-podcast\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
